--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-clusterer": "^2.0.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.10.0",
