--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/app": "^0.10.2",
+    "@firebase/database": "^1.0.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/database": "^19.2.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.14",
+    "expo-linear-gradient": "~12.7.2",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
