--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-maps": "1.10.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
