--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
