--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-clusterer": "^2.0.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.10.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
