--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
-    "react-native-maps": "1.10.0",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^1.10.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
