--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@firebase/database": "^1.0.4",
     "@firebase/firestore": "^4.6.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/database": "^19.2.2",
-    "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -26,9 +26,10 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.10.0",
     "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "1.10.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.8.1",
